# contax

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
contacts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
contacts/migrations/: 0001_initial.py  0002_alter_contact_photo.py  0003_rename_is_favorite_contact_is_favourite.py
contacts/templates/contacts/: _favourite_status.html  base.html  contact_confirm_delete.html  contact_detail.html  contact_form.html  contact_list.html
contax/: asgi.py  settings.py  urls.py  wsgi.py
