[project]
name = "contax"
version = "0.1.0"
description = "Contact manager application. Sample application for DfT job application."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.6",
    "django-htmx>=1.22.0",
    "djangorestframework>=3.15.2",
    "markdown>=3.7",
    "pillow>=11.1.0",
]

[dependency-groups]
dev = [
    "isort>=6.0.0",
    "pdbpp>=0.10.3",
    "pytest>=8.3.4",
    "pytest-django>=4.10.0",
]
